--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,21 +5,117 @@ output:
     keep_md: true
 ---
 
+#Introduction
+It is now possible to collect a large amount of data about personal movement using activity monitoring devices such as a Fitbit, Nike Fuelband, or Jawbone Up. These type of devices are part of the “quantified self” movement – a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. But these data remain under-utilized both because the raw data are hard to obtain and there is a lack of statistical methods and software for processing and interpreting the data.
+
+This assignment makes use of data from a personal activity monitoring device. This device collects data at 5 minute intervals through out the day. The data consists of two months of data from an anonymous individual collected during the months of October and November, 2012 and include the number of steps taken in 5 minute intervals each day.
 
 ## Loading and preprocessing the data
+1. Load the activity data
+```{r}
+rawData <- read.csv("activity.csv")
+```
 
+2. Load the necessary libraries (dplyr, lattice & timeDate)
+```{r}
+
+
+library(dplyr)
+library(lattice)
+library(timeDate)
+```
 
 
 ## What is mean total number of steps taken per day?
 
+3. Ignore the missing values in the dataset
+```{r}
+dataNoNa <-filter(rawData, is.na(steps) == FALSE)
+```
 
+4. Using the dplyr group_by functionality, group by date and calculate the total steps per dat
+```{r}
+by_date <- summarize(group_by(dataNoNa, date), TotalNumberOfSteps = sum(steps))
+```
 
+With this, the mean total number of steps taken per day has been calculated. The below table shows the total number of steps taken per day, for the first 10 days
+```{r}
+head(by_date, 10)
+```
+
+A histogram is displayed, showing the total number of steps per day:
+```{r}
+hist(by_date$TotalNumberOfSteps, main = "Histogram for Total # of Steps Per Day", xlab = "Total Steps Per Day")
+```
+
+The mean and median for of the total steps taken per day, is show below for the first 10 days:
+```{r}
+by_data_withMeanMedian <- summarize(group_by(dataNoNa, date), TotalSteps = sum(steps), MeanSteps = mean(steps), MedianSteps = median(steps))
+head(by_data_withMeanMedian, 10)
+```
 ## What is the average daily activity pattern?
+1. Calculating the average number of steps taken, averaged across all days:
+```{r}
+by_int <- summarize(group_by(dataNoNa, interval), mean = mean(steps))
+```
 
+2. Plotting the average daily activity patter
+```{r}
+plot(by_int$interval, by_int$mean, type = "l", main = "Average steps per Interval", xlab = "Interval", ylab = "Average Steps")
+```
 
+3. The 5-minute interval that contains the maximum number of steps is 835 interval, and the number of steps is 206:
+```{r}
+head(arrange(by_int, desc(mean)), 1)
+```
 
 ## Imputing missing values
+The total number of missing values in the dataset (where steps is null) is 2304
+```{r}
+ count(filter(rawData, is.na(steps) == TRUE))
+```
 
+Creating a new dataset that is equal to the original dataset but with the missing data filled in. The strategy for filling in all of the missing values in the dataset, is to replace the NA with the mean of that 5-minute interval.
+```{r}
+dataReplaceNA <- rawData
+dataReplaceNA[is.na(rawData)] <- by_int$mean
+```
+The first 10 results are shown below:
+```{r}
+head(dataReplaceNA,10)
+```
 
+Group by date and calculate the total steps:
+```{r}
+dataReplaceNA_byDate <- summarize(group_by(dataReplaceNA, date), sum = sum(steps))
+hist(dataReplaceNA_byDate$sum, main = "Histogram for Total # of Steps Per Day", xlab = "Total Steps Per Day")
+```
 
+To compare the dataset with NAs and the dataset without NAs we calculate and compare the means.We notice that the mean of the complete dataset (10766.19) is equal to the mean of the dataset without missing values, which is expected since the NAs were replaced with the mean
+```{r}
+mean(dataReplaceNA_byDate$sum)
+mean(by_date$TotalNumberOfSteps)
+
+```
 ## Are there differences in activity patterns between weekdays and weekends?
+
+
+Using the dplyr and the timeDate package, a column is added to indicate if the dat3e is a WEEKDAY or WEEKEND
+```{r}
+dataReplaceNA<- mutate(dataReplaceNA, Weekday = isWeekday(dataReplaceNA$date))
+dataReplaceNA$Weekday <- gsub(TRUE, "WEEKDAY",dataReplaceNA$Weekday)
+dataReplaceNA$Weekday <- gsub(FALSE, "WEEKEND",dataReplaceNA$Weekday)
+```
+
+The first 10 rows are shown below:
+```{r}
+head(dataReplaceNA, 10)
+```
+
+ We can compute the activity again, this time separating the data not only by interval but also by the Weekend factor.
+```{r}
+xyplot(steps ~  interval | Weekday, data = dataReplaceNA, layout = c(1,2), type ="l", ylab="Number of Steps")
+```
+
+There is a difference between the weekday and weekend activity patterns. On Weekends, the activity is later in the day, compared to weekend on weekdays. 
+
